--- a/src/AvaloniaInside.SplashScreen.csproj
+++ b/src/AvaloniaInside.SplashScreen.csproj
@@ -4,6 +4,17 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <AvaloniaVersion>0.10.17</AvaloniaVersion>
+        <Title>AvaloniaInside SplashScreen</Title>
+        <Authors>AvaloniaInside</Authors>
+        <PackageTags>AvaloniaInside, SplashScreen</PackageTags>
+        <Company>AvaloniaInside</Company>
+        <Product>SplashScreen</Product>
     </PropertyGroup>
-
+    <ItemGroup>
+        <PackageReference Include="Avalonia" Version="$(AvaloniaVersion)" />
+        <PackageReference Include="Avalonia.LinuxFrameBuffer" Version="$(AvaloniaVersion)" />
+        <PackageReference Include="SkiaSharp.Skottie" Version="2.88.1-preview.79" />
+        <PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="2.88.1-preview.79" />
+    </ItemGroup>
 </Project>
