--- a/src/AvaloniaInside.SplashScreen.csproj
+++ b/src/AvaloniaInside.SplashScreen.csproj
@@ -19,11 +19,11 @@
         <RepositoryUrl>https://github.com/AvaloniaInside/SplashScreen</RepositoryUrl>
         <PackageLicenseUrl>https://licenses.nuget.org/MIT</PackageLicenseUrl>
         <RepositoryType>git</RepositoryType>
+        <PackageVersion>1.0.1</PackageVersion>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Avalonia" Version="$(AvaloniaVersion)" />
         <PackageReference Include="Avalonia.LinuxFrameBuffer" Version="$(AvaloniaVersion)" />
         <PackageReference Include="SkiaSharp.Skottie" Version="2.88.1-preview.79" />
-        <PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="2.88.1-preview.79" />
+        <PackageReference Include="SkiaSharp.NativeAssets.Linux" Version="2.88.1-preview.79" />
     </ItemGroup>
 </Project>
